--- a/docs/_sass/mero/_figure.scss
+++ b/docs/_sass/mero/_figure.scss
@@ -7,6 +7,7 @@ figure {
   position: relative;
   border-radius: 0.5vh;
   background-size: cover;
+  z-index: 0;
   img {
     position: absolute;
     top: 50%;
@@ -18,7 +19,7 @@ figure {
     position: absolute;
     bottom: 0;
     width: 100%;
-    z-index: 10;
+    z-index: 2;
     padding: 0.5vh;
     font-size: 0.9rem;
     font-family: $system-fonts;
